force-app/main/default/objects/aecm__Capability_Process__c/aecm__Capability_Process__c.object-meta.xml
<CustomObject>
    <description>Relationship object to establish a many to many relationship between a capability and a process.</description>
    <label>Capability Process</label>
    <nameField>
        <displayFormat>CP-{mm}{yy}{000000}</displayFormat>
        <label>Capability Process System Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capability Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>