force-app/main/default/objects/aecm__Capability_Process__c/fields/aecm__Allocation_Amount__c.field-meta.xml
<CustomField>
    <fullName>aecm__Allocation_Amount__c</fullName>
    <description>Allocated process cost to a particular capability based on allocation percentage</description>
    <formula>aecm__Estimated_Process_Cost__c *  aecm__Allocation_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>