force-app/main/default/objects/aecm__Capability_Process__c/fields/aecm__Allocation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>aecm__Allocation_Percentage__c</fullName>
    <description>Proportion of allocated process cost on a particular capability</description>
    <label>Allocation Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>