force-app/main/default/objects/aecm__Capability_Process__c/fields/aecm__Capability__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability__c</fullName>
    <description>One side of a many to many relationship with processes.</description>
    <inlineHelpText>Capability end of a many to many relationship with process.</inlineHelpText>
    <label>Capability</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only active capabilities can be selected.</errorMessage>
        <filterItems>
            <field>aecm__Capability__c.aecm__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>aecm__Capability__c</referenceTo>
    <relationshipLabel>Capability Processes</relationshipLabel>
    <relationshipName>Capability_Processes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>