force-app/main/default/objects/aecm__Capability_Process__c/fields/aecm__Capability_Active__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Active__c</fullName>
    <description>Return active status of the associated capability</description>
    <formula>aecm__Capability__r.aecm__Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Active status of the associated capability</inlineHelpText>
    <label>Capability Active</label>
    <type>Checkbox</type>
</CustomField>