force-app/main/default/objects/aecm__Capability_Process__c/fields/aecm__Estimated_Process_Cost__c.field-meta.xml
<CustomField>
    <fullName>aecm__Estimated_Process_Cost__c</fullName>
    <formula>/* Bring in value from Process object so we can roll it up at the Capability Level */
aecm__Process__r.aecm__Total_Anual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Process Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>