force-app/main/default/objects/aecm__Capability_Process__c/fields/aecm__Process__c.field-meta.xml
<CustomField>
    <fullName>aecm__Process__c</fullName>
    <description>Process end of a many to many relationship with capability.</description>
    <inlineHelpText>Process end of a many to many relationship with capability.</inlineHelpText>
    <label>Process</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <errorMessage>Process level related to a capability must be L3 or L4.</errorMessage>
        <filterItems>
            <field>aecm__Process__c.aecm__Level__c</field>
            <operation>equals</operation>
            <value>L3</value>
        </filterItems>
        <filterItems>
            <field>aecm__Process__c.aecm__Level__c</field>
            <operation>equals</operation>
            <value>L4</value>
        </filterItems>
        <filterItems>
            <field>aecm__Process__c.aecm__Taxonomy_Root__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Select L3 or L4.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>aecm__Process__c</referenceTo>
    <relationshipLabel>Capability Processes</relationshipLabel>
    <relationshipName>Capability_Processes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>