force-app/main/default/objects/aecm__Capability_Process__c/fields/aecm__Process_Resources__c.field-meta.xml
<CustomField>
    <fullName>aecm__Process_Resources__c</fullName>
    <formula>aecm__Process__r.aecm__Process_Resources__c /  aecm__Process__r.aecm__Process_Steps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Resources</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>