force-app/main/default/objects/aecm__Capability_Process__c/fields/aecm__Title__c.field-meta.xml
<CustomField>
    <fullName>aecm__Title__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ Id, aecm__Capability__r.Name + &quot; - &quot; + aecm__Process__r.aecm__Process_Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capability Process Name</label>
    <type>Text</type>
</CustomField>