force-app/main/default/objects/aecm__Capability_Process__c/fields/aecm__Z__c.field-meta.xml
<CustomField>
    <fullName>aecm__Z__c</fullName>
    <label>Z</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>