force-app/main/default/objects/aecm__Capability_Process__c/fields/YG_Cost_Allocation__c.field-meta.xml
<CustomField>
    <fullName>YG_Cost_Allocation__c</fullName>
    <formula>YG_Cost_Allocation_Percentage__c *  aecm__Process__r.aecm__Total_Anual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>