force-app/main/default/objects/aecm__Capability_Process__c/fields/YG_Cost_Allocation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>YG_Cost_Allocation_Percentage__c</fullName>
    <label>Cost Allocation Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>