force-app/main/default/objects/aecm__Capability_Process__c/listViews/aecm__All.listView-meta.xml
<ListView>
    <fullName>aecm__All</fullName>
    <columns>aecm__Title__c</columns>
    <columns>NAME</columns>
    <columns>aecm__Estimated_Process_Cost__c</columns>
    <columns>aecm__Process__c</columns>
    <columns>aecm__Z__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>